# eminet-test

./: .clang-format  .gitignore  .gitmodules  .project
src/: CMakeLists.txt  EmiNetTest.cpp
src/components/: CMakeLists.txt
src/components/include/WebApi/: WebApi.hpp
src/components/src/WebApi/: WebApi.cpp  WebApiImpl.cpp  WebApiImpl.hpp
src/libs/: CMakeLists.txt
web/eminet-app/: .angular-cli.json  README.md  package-lock.json  package.json
web/eminet-app/e2e/: app.e2e-spec.ts
web/eminet-app/src/: index.html
web/eminet-app/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  device.service.ts  device.ts  hero.service.ts  in-memory-data.service.ts  message.service.ts
web/eminet-app/src/app/devicelist/: devicelist.component.css  devicelist.component.html  devicelist.component.ts
web/eminet-app/src/app/deviceviewer/: deviceviewer.component.html  deviceviewer.component.spec.ts  deviceviewer.component.ts
web/eminet-app/src/app/hero-detail/: hero-detail.component.html  hero-detail.component.ts
web/eminet-app/src/app/heroes/: heroes.component.css  heroes.component.html  heroes.component.ts
web/eminet-app/src/app/messages/: messages.component.html
